# parallel-matplotlib-animation

./: .gitignore  README.md  pyproject.toml
src/parallel_animate/: animator.py
src/parallel_animate/examples/: multi_panel_animation.py  scaling_test.py  simple_wave_animation.py  very_complex_animation.py
tests/: test_animator.py  test_examples.py
